# temoa-web-gui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hosting_instructions.md  pyproject.toml  run.sh  temoa_runner.py
.github/workflows/: ci.yml
assets/: tutorial_config.toml  tutorial_database.sqlite
backend/: __init__.py  main.py  utils.py
backend/tests/: test_download.py  test_main.py
frontend/: index.html  package-lock.json  package.json  wrangler.toml
frontend/src/: App.jsx  App.test.jsx  index.css
