[project]
name = "temoa-web-gui"
version = "0.1.0"
description = "Web interface for Temoa Energy System Model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temoa>=4.0.0a1",
    "fastapi",
    "uvicorn[standard]",
    "tomlkit",
    "datasette",
    "websockets",
    "certifi",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
filterwarnings = [
    "ignore:.*deprecated - use.*:pyparsing.PyparsingDeprecationWarning",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
